--- a/src/main/resources/templates/my_hour_edited_email.html
+++ b/src/main/resources/templates/my_hour_edited_email.html
@@ -4,6 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
+
 <div align="center" style="background-color: #edeef2; padding-bottom: 119px; padding-top: 58px; width: 100%;">
     <table style="width: 600px; margin-left: auto; margin-right: auto;">
         <tr>
@@ -25,43 +26,43 @@
                 <span th:text="${managerName} + ' has edited your attendance hours, the changes are reflected below:'"></span>
             </td>
         </tr>
-        <tr style="display:flex;">
+        <tr style="display:flex; text-align: center;">
             <td th:if="${date}"
                 th:text="${date}"
-                style="font-size: 16px; margin: 0 auto; padding-top: 1.5px;">
+                style="font-size: 16px; margin: 0 auto; display: table; min-width: 135px; line-height: 1.4;">
             </td>
             <td th:unless="${#lists.isEmpty(originalTimeLogs)}"
-                style="margin: 0 auto;">
+                style="margin: 0 auto; padding: 0;">
                 <table>
                     <tr th:each="originalTimeLog: ${originalTimeLogs}">
                         <td th:text="${originalTimeLog.text}"
-                            th:style="'font-size: 16px; line-height: 1.38; text-align: center; margin: 0 auto; color: ' + ${originalTimeLog.color} + '; font-style: ' + ${originalTimeLog.fontStyle} + ';'"></td>
+                            th:style="'font-size: 16px; line-height: 1.38; min-width: 100px; color: ' + ${originalTimeLog.color} + '; font-style: ' + ${originalTimeLog.fontStyle} + ';'"></td>
                     </tr>
                 </table>
             </td>
             <td th:unless="${#lists.isEmpty(originalTimeLogs) || #lists.isEmpty(editedTimeLogs)}"
-                style="font-size: 16px; color: #7b7e84; text-align: center; display: flex; margin: 0 auto; padding-top: 1.5px;">
+                style="font-size: 16px; color: #7b7e84; margin: 0 auto; display: table; line-height: 1.4;">
                 <span>>>>></span>
             </td>
             <td th:if="${editedDate}"
                 th:text="${editedDate}"
-                style="font-size: 16px; margin: 0 auto; padding-top: 1.5px;">
+                style="font-size: 16px; margin: 0 auto; display: table; min-width: 135px; line-height: 1.4;">
             </td>
             <td th:unless="${#lists.isEmpty(editedTimeLogs)}"
-                style="margin: 0 auto;">
+                style="margin: 0 auto; padding: 0;">
                 <table>
                     <tr th:each="editedTimeLog: ${editedTimeLogs}">
                         <td th:text="${editedTimeLog.text}"
-                            th:style="'font-size: 16px; line-height: 1.38; text-align: center; color: ' + ${editedTimeLog.color} + '; font-style: ' + ${editedTimeLog.fontStyle} + ';'"></td>
+                            th:style="'font-size: 16px; line-height: 1.38; min-width: 100px; color: ' + ${editedTimeLog.color} + '; font-style: ' + ${editedTimeLog.fontStyle} + ';'"></td>
                     </tr>
                 </table>
             </td>
             <td th:if="${#lists.isEmpty(originalTimeLogs)}"
-                style="font-size: 16px; color: #7b7e84; text-align: center; display: flex; margin: 0 auto; padding-top: 1.5px;">
+                style="font-size: 16px; color: #7b7e84; text-align: center; margin: 0 auto; display: table;">
                 <span>have been added</span>
             </td>
             <td th:if="${#lists.isEmpty(editedTimeLogs)}"
-                style="font-size: 16px; color: #7b7e84; text-align: center; display: flex; margin: 0 auto; padding-top: 1.5px;">
+                style="font-size: 16px; color: #7b7e84; text-align: center; margin: 0 auto; display: table;">
                 <span>have been removed</span>
             </td>
         </tr>
